--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "gggggggg",
-    "short_name": "gggggggg",
+    "name": "practice",
+    "short_name": "practice",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
